fixed horizontal scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
 @font-face {
     font-family: 'Bricolage';
     src: url('https://a.dvsho.com/Bricolage.ttf') format('truetype');
@@ -14,6 +23,7 @@
 
 html {
     overflow-y: scroll;
+    overflow-x: hidden;
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
@@ -41,6 +51,9 @@ body {
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
 }
 
 @keyframes fadeInAnimation {
